--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,6 +12,12 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v2
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
@@ -23,3 +29,4 @@ jobs:
       with:
         push: true
         tags: robwhitby/shakedown:latest
+        platforms: linux/amd64,linux/arm64
