--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,32 +1,29 @@
 name: Push to DockerHub
 
 on:
+  workflow_dispatch:
   push:
-    branches:
-    - main
-  workflow_dispatch: {}
+    branches: [main]
+    paths-ignore: [README.md, action.yml]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v2
-
     - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
-    
+      uses: docker/setup-qemu-action@v3
+
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      uses: docker/setup-buildx-action@v3
 
     - name: Login to Docker Hub
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
         username: robwhitby
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build and push
-      uses: docker/build-push-action@v3
+      uses: docker/build-push-action@v6
       with:
         push: true
         tags: robwhitby/shakedown:latest
